use URI instead of URL for stsendpoint
svn path=/trunk/; revision=702